--- a/NEWS
+++ b/NEWS
@@ -1,7 +1,7 @@
 Version 1.1.3
 -------------
 
-- Increased the tolerance of a test to pass checks on r-devel.
+- A minor change to one of the package's unit tests.
 
 Version 1.1.2
 -------------
